cloud_scheduling/service-cpu-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: scale-service
spec:
  selector:
    app: scale-task
  ports:
    - port: 80
      targetPort: 6060
      protocol: TCP
      name: http
